src/app/components/autosuggest/autosuggest.component.scss
@use "../../style/shadow";

:host {
  display: flex;
}

.autocomplete {
  display: flex;
  position: relative;
  align-items: center;
}

.search-icon {
  left: 1rem;
  position: absolute;
  color: var(--quaternary-contrast);
}

.entry-icon {
  left: 0.5rem;
  top: 0.5rem;
  position: absolute;
}

[ngComboboxInput] {
  width: 16rem;
  font-size: 1rem;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 3rem;
  color: var(--primary-contrast);
  outline-color: var(--hot-pink);
  border: 1px solid var(--quinary-contrast);
  background-color: var(--color-background-overlay);
}

[ngComboboxInput]::placeholder {
  color: var(--quaternary-contrast);
}

[ngCombobox]:has([aria-expanded='false']) .popup {
  display: none;
}

.popup {
  width: 100%;
  margin-top: 0.25re;
  padding: 0.5rem;
  max-height: 11rem;
  border-radius: 0.5rem;
  background-color: var(--color-background);
  box-shadow: shadow.$lg;
  font-size: 0.9rem;
}

.no-results {
  padding: 1rem;
}

[ngListbox] {
  gap: 2px;
  height: 100%;
  display: flex;
  overflow: auto;
  flex-direction: column;
}
[ngOption] {
  display: flex;
  cursor: pointer;
  align-items: center;
  margin: 1px;
  padding: 0 1rem;
  min-height: 2.25rem;
  border-radius: 0.5rem;
}
[ngOption]:hover {
  background-color: color-mix(in srgb, var(--primary-contrast) 5%, transparent);
}
[ngOption][data-active='true'] {
  outline-offset: -2px;
  outline: 2px solid var(--hot-pink);
}
[ngOption][aria-selected='true'] {
  color: var(--hot-pink);
  background-color: color-mix(in srgb, var(--hot-pink) 5%, transparent);
}
[ngOption]:not([aria-selected='true']) .check-icon {
  display: none;
}
.option-label {
  flex: 1;
}

.option-image {
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  margin-right: 0.5rem;
}

.check-icon {
  font-size: 0.9rem;
}

.selected-icon {
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  margin-right: 0.5rem;
}

